# rust-microservice-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
