[package]
name = "rs-microservice"
version = "0.1.0"
authors = ["Periklis Tsirakidis <periklis.tsirakidis@holidaycheck.com>"]

[dependencies]
chrono="0.4.2"
futures = "0.1.20"
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
pretty_env_logger = "0.2.3"
serde = "1.0.58"
serde_derive = "1.0.58"
serde_json = "1.0.17"
